--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -237,9 +237,10 @@
     "    # first calcualte _=X@beta_md-y\n",
     "    def __parallel_plus(_ind):\n",
     "        import numpy as _np\n",
-    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
+    "        _X = bed.read(_np.s_[:, _ind],\n",
+    "                      dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
     "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "        return _X@beta_md[_ind+1]\n",
+    "        return _X @ beta_md[_ind + 1]\n",
     "#         __ = _np.zeros(N)\n",
     "#         for j in _ind:\n",
     "#             _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
@@ -247,9 +248,12 @@
     "#             __ += _X * beta_md[j + 1]\n",
     "#         return __\n",
     "\n",
-    "    # multiprocessing starts here\n",
-    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "    _splited_array = [\n",
+    "        __array for __array in _splited_array if __array.size != 0\n",
+    "    ]\n",
     "    with _mp.Pool(core_num) as pl:\n",
     "        _ = pl.map(__parallel_plus, _splited_array)\n",
     "    _ = _np.array(_).sum(0)\n",
@@ -259,9 +263,10 @@
     "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
     "    def __parallel_assign(_ind):\n",
     "        import numpy as _np\n",
-    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
+    "        _X = bed.read(_np.s_[:, _ind],\n",
+    "                      dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
     "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "        return _@_X\n",
+    "        return _ @ _X\n",
     "#         k = 0\n",
     "#         __ = _np.zeros(len(_ind))\n",
     "#         for j in _ind:\n",
@@ -271,12 +276,14 @@
     "#             k += 1\n",
     "#         return __\n",
     "\n",
-    "    # multiprocessing starts here\n",
-    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "    _splited_array = [\n",
+    "        __array for __array in _splited_array if __array.size != 0\n",
+    "    ]\n",
     "    with _mp.Pool(core_num) as pl:\n",
-    "        _XTXbeta = pl.map(__parallel_assign,\n",
-    "                          _splited_array)\n",
+    "        _XTXbeta = pl.map(__parallel_assign, _splited_array)\n",
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
     "    _XTXbeta = _np.zeros(p + 1)\n",
     "    _XTXbeta[SNP_ind + 1] = __XTXbeta\n",
@@ -289,8 +296,8 @@
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_SCAD_LM_parallel(N, SNP_ind, bed, beta_md, y,\n",
-    "                                             outcome_iid, _lambda, a,\n",
-    "                                             core_num, multp):\n",
+    "                                             outcome_iid, _lambda, a, core_num,\n",
+    "                                             multp):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
@@ -301,7 +308,8 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num, multp=multp) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "        core_num=core_num,\n",
+    "        multp=multp) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
@@ -318,12 +326,14 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num, multp=multp) + MCP_concave_grad(\n",
+    "        core_num=core_num,\n",
+    "        multp=multp) + MCP_concave_grad(\n",
     "            x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_lambda_max_LM_parallel(bed, y, outcome_iid, N, SNP_ind, core_num, multp):\n",
+    "def _SNP_lambda_max_LM_parallel(bed, y, outcome_iid, N, SNP_ind, core_num,\n",
+    "                                multp):\n",
     "    \"\"\"\n",
     "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
     "    \"\"\"\n",
@@ -341,7 +351,8 @@
     "        beta_md=_np.zeros(len(SNP_ind)),\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num, multp=multp)\n",
+    "        core_num=core_num,\n",
+    "        multp=multp)\n",
     "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
@@ -360,7 +371,8 @@
     "                                 penalty=\"SCAD\",\n",
     "                                 a=3.7,\n",
     "                                 gamma=2.,\n",
-    "                                 core_num=\"NOT DECLARED\", multp=1):\n",
+    "                                 core_num=\"NOT DECLARED\",\n",
+    "                                 multp=1):\n",
     "    '''\n",
     "    Carry out the optimization for penalized LM for a fixed lambda.\n",
     "    '''\n",
@@ -391,10 +403,11 @@
     "\n",
     "        def __parallel_assign(_ind):\n",
     "            import numpy as _np\n",
-    "            _X = bed.read(_np.s_[:, _ind], dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
+    "            _X = bed.read(_np.s_[:, _ind],\n",
+    "                          dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
     "            _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "            _X -= _np.mean(_X, 0).reshape(1,-1)\n",
-    "            return _y@_X/N\n",
+    "            _X -= _np.mean(_X, 0).reshape(1, -1)\n",
+    "            return _y @ _X / N\n",
     "#             k = 0\n",
     "#             __ = _np.zeros(len(_ind))\n",
     "#             for j in _ind:\n",
@@ -405,12 +418,14 @@
     "#                 k += 1\n",
     "#             return __\n",
     "\n",
-    "        # multiprocessing starts here\n",
-    "        _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "        _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "        _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "        _splited_array = [\n",
+    "            __array for __array in _splited_array if __array.size != 0\n",
+    "        ]\n",
     "        with _mp.Pool(core_num) as pl:\n",
-    "            _XTy = pl.map(__parallel_assign,\n",
-    "                          _splited_array)\n",
+    "            _XTy = pl.map(__parallel_assign, _splited_array)\n",
     "        _XTy = _np.hstack(_XTy)\n",
     "        beta = _np.zeros(p + 1)\n",
     "        beta[SNP_ind + 1] = _  #_np.sign(_XTy)\n",
@@ -457,7 +472,8 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                a=a,\n",
-    "                core_num=core_num, multp=multp)\n",
+    "                core_num=core_num,\n",
+    "                multp=multp)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -494,7 +510,8 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                gamma=gamma,\n",
-    "                core_num=core_num, multp=multp)\n",
+    "                core_num=core_num,\n",
+    "                multp=multp)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -519,7 +536,8 @@
     "                                  penalty=\"SCAD\",\n",
     "                                  a=3.7,\n",
     "                                  gamma=2.,\n",
-    "                                  core_num=\"NOT DECLARED\", multp=1):\n",
+    "                                  core_num=\"NOT DECLARED\",\n",
+    "                                  multp=1):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -553,10 +571,13 @@
     "\n",
     "    def __parallel_assign(_ind):\n",
     "        import numpy as _np\n",
-    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
+    "        _X = bed.read(_np.s_[:, _ind],\n",
+    "                      dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
     "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "        _X -= _np.mean(_X, 0).reshape(1,-1)\n",
-    "        return _y@_X/N\n",
+    "        _X -= _np.mean(_X, 0).reshape(1, -1)\n",
+    "        return _y @ _X / N\n",
+    "\n",
+    "\n",
     "#         k = 0\n",
     "#         __ = _np.zeros(len(_ind))\n",
     "#         for j in _ind:\n",
@@ -567,9 +588,12 @@
     "#             k += 1\n",
     "#         return __\n",
     "\n",
-    "    # multiprocessing starts here\n",
-    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "    _splited_array = [\n",
+    "        __array for __array in _splited_array if __array.size != 0\n",
+    "    ]\n",
     "    with _mp.Pool(core_num) as pl:\n",
     "        _XTy = pl.map(__parallel_assign, _splited_array)\n",
     "    _XTy = _np.hstack(_XTy)\n",
@@ -595,7 +619,8 @@
     "            outcome_iid=outcome_iid,\n",
     "            a=a,\n",
     "            gamma=gamma,\n",
-    "            core_num=core_num, multp=multp)[1]\n",
+    "            core_num=core_num,\n",
+    "            multp=multp)[1]\n",
     "    return beta_mat[1:, :]"
    ]
   },
