--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -219,7 +219,8 @@
    "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_convex_logistic_parallel(N, SNP_ind, bed, beta_md,\n",
-    "                                                     y, outcome_iid, core_num, multp):\n",
+    "                                                     y, outcome_iid, core_num,\n",
+    "                                                     multp):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -237,9 +238,10 @@
     "    # first calcualte _=X@beta_md-y\n",
     "    def __parallel_plus(_ind):\n",
     "        import numpy as _np\n",
-    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
+    "        _X = bed.read(_np.s_[:, _ind],\n",
+    "                      dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
     "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "        return _X@beta_md[_ind+1]\n",
+    "        return _X @ beta_md[_ind + 1]\n",
     "#         __ = _np.zeros(N)\n",
     "#         for j in _ind:\n",
     "#             _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
@@ -247,9 +249,12 @@
     "#             __ += _X * beta_md[j + 1]\n",
     "#         return __\n",
     "\n",
-    "    # multiprocessing starts here\n",
-    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "    _splited_array = [\n",
+    "        __array for __array in _splited_array if __array.size != 0\n",
+    "    ]\n",
     "    with _mp.Pool(core_num) as pl:\n",
     "        _ = pl.map(__parallel_plus, _splited_array)\n",
     "    _ = _np.array(_).sum(0)\n",
@@ -259,9 +264,10 @@
     "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
     "    def __parallel_assign(_ind):\n",
     "        import numpy as _np\n",
-    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
+    "        _X = bed.read(_np.s_[:, _ind],\n",
+    "                      dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
     "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "        return _@_X\n",
+    "        return _ @ _X\n",
     "#         k = 0\n",
     "#         __ = _np.zeros(len(_ind))\n",
     "#         for j in _ind:\n",
@@ -271,12 +277,14 @@
     "#             k += 1\n",
     "#         return __\n",
     "\n",
-    "    # multiprocessing starts here\n",
-    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "    _splited_array = [\n",
+    "        __array for __array in _splited_array if __array.size != 0\n",
+    "    ]\n",
     "    with _mp.Pool(core_num) as pl:\n",
-    "        _XTXbeta = pl.map(__parallel_assign,\n",
-    "                          _splited_array)\n",
+    "        _XTXbeta = pl.map(__parallel_assign, _splited_array)\n",
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
     "    _XTXbeta = _np.zeros(p + 1)\n",
     "    _XTXbeta[SNP_ind + 1] = __XTXbeta\n",
@@ -300,7 +308,8 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num, multp=multp) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "        core_num=core_num,\n",
+    "        multp=multp) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
@@ -317,7 +326,8 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num, multp=multp) + MCP_concave_grad(\n",
+    "        core_num=core_num,\n",
+    "        multp=multp) + MCP_concave_grad(\n",
     "            x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
@@ -341,7 +351,8 @@
     "        beta_md=_np.zeros(len(SNP_ind)),\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num, multp=multp)\n",
+    "        core_num=core_num,\n",
+    "        multp=multp)\n",
     "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
@@ -360,7 +371,8 @@
     "                                       penalty=\"SCAD\",\n",
     "                                       a=3.7,\n",
     "                                       gamma=2.,\n",
-    "                                       core_num=\"NOT DECLARED\", multp=1):\n",
+    "                                       core_num=\"NOT DECLARED\",\n",
+    "                                       multp=1):\n",
     "    '''\n",
     "    Carry out the optimization for penalized logistic for a fixed lambda.\n",
     "    '''\n",
@@ -392,10 +404,11 @@
     "\n",
     "        def __parallel_assign(_ind):\n",
     "            import numpy as _np\n",
-    "            _X = bed.read(_np.s_[:, _ind], dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
+    "            _X = bed.read(_np.s_[:, _ind],\n",
+    "                          dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
     "            _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "            _X -= _np.mean(_X, 0).reshape(1,-1)\n",
-    "            return _y@_X/N\n",
+    "            _X -= _np.mean(_X, 0).reshape(1, -1)\n",
+    "            return _y @ _X / N\n",
     "#             k = 0\n",
     "#             __ = _np.zeros(len(_ind))\n",
     "#             for j in _ind:\n",
@@ -406,12 +419,14 @@
     "#                 k += 1\n",
     "#             return __\n",
     "\n",
-    "        # multiprocessing starts here\n",
-    "        _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "        _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "        _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "        _splited_array = [\n",
+    "            __array for __array in _splited_array if __array.size != 0\n",
+    "        ]\n",
     "        with _mp.Pool(core_num) as pl:\n",
-    "            _XTy = pl.map(__parallel_assign,\n",
-    "                          _splited_array)\n",
+    "            _XTy = pl.map(__parallel_assign, _splited_array)\n",
     "        _XTy = _np.hstack(_XTy)\n",
     "        beta = _np.zeros(p + 1)\n",
     "        beta[SNP_ind + 1] = _np.sign(_XTy)\n",
@@ -458,7 +473,8 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                a=a,\n",
-    "                core_num=core_num, multp=multp)\n",
+    "                core_num=core_num,\n",
+    "                multp=multp)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -495,7 +511,8 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                gamma=gamma,\n",
-    "                core_num=core_num, multp=multp)\n",
+    "                core_num=core_num,\n",
+    "                multp=multp)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -520,7 +537,8 @@
     "                                        penalty=\"SCAD\",\n",
     "                                        a=3.7,\n",
     "                                        gamma=2.,\n",
-    "                                        core_num=\"NOT DECLARED\", multp=1):\n",
+    "                                        core_num=\"NOT DECLARED\",\n",
+    "                                        multp=1):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -555,10 +573,13 @@
     "\n",
     "    def __parallel_assign(_ind):\n",
     "        import numpy as _np\n",
-    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
+    "        _X = bed.read(_np.s_[:, _ind],\n",
+    "                      dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
     "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
-    "        _X -= _np.mean(_X, 0).reshape(1,-1)\n",
-    "        return _y@_X/N\n",
+    "        _X -= _np.mean(_X, 0).reshape(1, -1)\n",
+    "        return _y @ _X / N\n",
+    "\n",
+    "\n",
     "#         k = 0\n",
     "#         __ = _np.zeros(len(_ind))\n",
     "#         for j in _ind:\n",
@@ -569,9 +590,12 @@
     "#             k += 1\n",
     "#         return __\n",
     "\n",
-    "    # multiprocessing starts here\n",
-    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
-    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "# multiprocessing starts here\n",
+    "\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num * multp)\n",
+    "    _splited_array = [\n",
+    "        __array for __array in _splited_array if __array.size != 0\n",
+    "    ]\n",
     "    with _mp.Pool(core_num) as pl:\n",
     "        _XTy = pl.map(__parallel_assign, _splited_array)\n",
     "    _XTy = _np.hstack(_XTy)\n",
@@ -597,7 +621,8 @@
     "            outcome_iid=outcome_iid,\n",
     "            a=a,\n",
     "            gamma=gamma,\n",
-    "            core_num=core_num, multp=multp)[1]\n",
+    "            core_num=core_num,\n",
+    "            multp=multp)[1]\n",
     "    return beta_mat[1:, :]"
    ]
   },
