--- a/LM_SCAD_MCP_np_MODULE-SNP_PCA.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_PCA.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Set up the class fundementals "
+    "# Set up the class fundementals \n",
+    "\n",
+    "## Kai Yang\n",
+    "## <kai.yang2 \"at\" mail.mcgill.ca>\n",
+    "## License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)\n",
+    "## [GPG Public key Fingerprint: B9F863A56220DBD56B91C3E835022A1A5941D810](https://keys.openpgp.org/vks/v1/by-fingerprint/B9F863A56220DBD56B91C3E835022A1A5941D810)"
    ]
   },
   {
@@ -692,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
